Added new panel art and panel animations. Added Achievement manager fixed issues with singletons

--- a/Looter/Assembly-CSharp.csproj
+++ b/Looter/Assembly-CSharp.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Assets\Script\Gameplay\PickUp.cs" />
     <Compile Include="Assets\Script\Gameplay\PickUpEnum.cs" />
     <Compile Include="Assets\Script\Gameplay\Player.cs" />
+    <Compile Include="Assets\Script\Menu\AchievementManager.cs" />
     <Compile Include="Assets\Script\Menu\MainMenuButtons.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>C:/Users/o017861f.STUDENT/Documents/Looter SourceTree/Looter/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
