track number of loot Clamp to game world Stats percistance pick up sprite changes show game over panel Save data after complete of level game over saves meters ran as well as attempt

--- a/Looter/Assembly-CSharp.csproj
+++ b/Looter/Assembly-CSharp.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Assets\Script\Menu\DataAndAchievementManager.cs" />
     <Compile Include="Assets\Script\Menu\MainMenuButtons.cs" />
     <Compile Include="Assets\Script\Menu\ShopUI.cs" />
+    <Compile Include="Assets\Script\Menu\StatsData.cs" />
     <Compile Include="Assets\Script\Menu\Wardrobe.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>C:/Users/o017861f/Documents/Looter/Looter/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
