--- a/Looter/Assembly-CSharp.csproj
+++ b/Looter/Assembly-CSharp.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Assets\Script\Menu\AchievementsUI.cs" />
     <Compile Include="Assets\Script\Menu\DataAndAchievementManager.cs" />
     <Compile Include="Assets\Script\Menu\MainMenuButtons.cs" />
+    <Compile Include="Assets\Script\Menu\Purchaseables.cs" />
     <Compile Include="Assets\Script\Menu\ShopUI.cs" />
     <Compile Include="Assets\Script\Menu\StatsData.cs" />
     <Compile Include="Assets\Script\Menu\Wardrobe.cs" />
