--- a/Looter/Assembly-CSharp.csproj
+++ b/Looter/Assembly-CSharp.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Assets\Script\Menu\ShopUI.cs" />
     <Compile Include="Assets\Script\Menu\StatsData.cs" />
     <Compile Include="Assets\Script\Menu\Wardrobe.cs" />
+    <None Include="Assets\StreamingAssets\UpgradeEffectsAndCosts.xml" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>C:/Users/o017861f/Documents/Looter/Looter/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
