--- a/Looter/Assembly-CSharp.csproj
+++ b/Looter/Assembly-CSharp.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Assets\Script\Menu\LoginInData.cs" />
     <Compile Include="Assets\Script\Menu\MainMenuButtons.cs" />
     <Compile Include="Assets\Script\Menu\Purchaseables.cs" />
+    <Compile Include="Assets\Script\Menu\SettingsUI.cs" />
     <Compile Include="Assets\Script\Menu\ShopUI.cs" />
     <Compile Include="Assets\Script\Menu\StatsData.cs" />
     <Compile Include="Assets\Script\Menu\Wardrobe.cs" />
