Added sounds, new map sections, social buttons

--- a/Looter/Assembly-CSharp.csproj
+++ b/Looter/Assembly-CSharp.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Assets\Script\Gameplay\PickUp.cs" />
     <Compile Include="Assets\Script\Gameplay\PickUpEnum.cs" />
     <Compile Include="Assets\Script\Gameplay\Player.cs" />
+    <Compile Include="Assets\Script\ManageMusic.cs" />
     <Compile Include="Assets\Script\Menu\AchievementsUI.cs" />
     <Compile Include="Assets\Script\Menu\DailyRewardUI.cs" />
     <Compile Include="Assets\Script\Menu\DataAndAchievementManager.cs" />
